--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
     color: #9400D3;
     text-align: center;
     font-size: 25px;
-    font-family: 'Rockin Rocker', sans-serif;
+    font-family: 'bold Arial';
 }
 
 #divButton {
